started vars color + container size

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -49,3 +49,9 @@ button {
   color: inherit;
   text-transform: inherit;
 }
+
+.container {
+  max-width: 1180px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
