--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -12,6 +12,11 @@ body {
   margin: 0;
   min-width: 320px;
   overflow-x: hidden;
+  font-family: Roboto, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: $light-black;
 }
 
 h1,
