--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -56,6 +56,14 @@ button {
   text-transform: inherit;
 }
 
+.flex {
+  display: flex;
+}
+
+.between {
+  justify-content: space-between;
+}
+
 .container {
   max-width: 1200px;
   padding: 0 25px;
