--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -64,6 +64,10 @@ button {
   justify-content: space-between;
 }
 
+.align {
+  align-items: center;
+}
+
 .container {
   max-width: 1200px;
   padding: 0 25px;
