--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -42,6 +42,26 @@
       }
     }
   }
+
+  &__bottom {
+    justify-content: flex-end;
+  }
+
+  &__info {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  &__date {
+    font-size: 14px;
+    line-height: 16px;
+  }
+
+  &__phone {
+    font-size: 22px;
+    line-height: 24px;
+  }
+
 }
 
 .menu {
