--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -2,6 +2,11 @@
   padding-top: 10px;
   color: $white;
   font-weight: 700;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
 
   &__logo {
     margin-right: 10px;
