new component ~ Map

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,5 +12,6 @@
 @import "components/app/card";
 @import "components/home/about";
 @import "components/home/more";
+@import "components/home/map";
 
 @import "media";
