started footer + social icons [styles]

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,5 +13,6 @@
 @import "components/home/about";
 @import "components/home/more";
 @import "components/home/map";
+@import "components/app/footer";
 
 @import "media";
