--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -73,6 +73,9 @@ button {
   padding: 0 25px;
   margin: 0 auto;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .def-btn {
