--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -96,7 +96,8 @@
     outline: none;
 
     &:active,
-    &:focus {
+    &:focus,
+    &.active {
       background-color: $btn-bg;
       color: $light-black;
     }
