--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,6 +13,8 @@
 @import "components/home/about";
 @import "components/home/more";
 @import "components/home/map";
+@import "components/catalog/index";
+@import "components/catalog/breadcrumbs";
 @import "components/app/footer";
 
 @import "media";
