new component ~ Sort

--- a/src/scss/components/catalog/_index.scss
+++ b/src/scss/components/catalog/_index.scss
@@ -1,3 +1,11 @@
 .catalog {
   padding-top: 100px;
+  color: $white;
+
+  &__title {
+    font-size: 35px;
+    line-height: 41px;
+    font-weight: 700;
+    margin-bottom: 25px;
+  }
 }
