--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,8 @@
 @import "components/home/map";
 @import "components/catalog/index";
 @import "components/catalog/breadcrumbs";
+@import "components/catalog/products";
+@import "components/catalog/sort";
 @import "components/app/footer";
 
 @import "media";
