--- a/src/scss/components/catalog/_sort.scss
+++ b/src/scss/components/catalog/_sort.scss
@@ -9,7 +9,7 @@
   &__col {
 
     &:not(:last-child) {
-      margin-right: 15px;
+      margin-right: 13px;
     }
 
     &-title {
@@ -26,7 +26,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 0 20px;
+      padding: 0 15px;
     }
 
     &.button {
@@ -52,6 +52,7 @@
 
       &:active {
         background-color: #EDEDED;
+        border: 3px solid #EDEDED;
       }
 
     }
@@ -67,7 +68,7 @@
       position: relative;
       width: 100%;
       height: 40px;
-      padding: 0 45px 0 20px;
+      padding: 0 45px 0 15px;
       border-radius: 35px;
       transition: background-color .2s;
       outline: none;
@@ -200,33 +201,17 @@
     }
 
     &__real[type=radio]:checked + .toggle__fake {
-
-      &:after {
-        display: block;
-      }
+      background-image: url('~@/assets/img/radio-on.svg');
     }
 
     &__real[type=radio] + .toggle__fake {
       position: relative;
       display: block;
-      width: 23px;
-      height: 23px;
+      width: 25px;
+      height: 25px;
       border-radius: 50%;
-      border: 3px solid $white;
       margin-right: 10px;
-
-      &:after {
-        content: '';
-        display: none;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 10px;
-        height: 10px;
-        background-color: $white;
-        border-radius: 50%;
-      }
+      background-image: url('~@/assets/img/radio-off.svg');
     }
 
 
