import pagination styles to index.scss

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,6 +17,7 @@
 @import "components/catalog/breadcrumbs";
 @import "components/catalog/products";
 @import "components/catalog/sort";
+@import "components/catalog/pagination";
 @import "components/app/footer";
 
 @import "media";
