--- a/src/scss/components/app/_footer.scss
+++ b/src/scss/components/app/_footer.scss
@@ -2,6 +2,7 @@
   margin-top: auto;
   padding: 30px 0;
   color: $white;
+  border-top: 1px solid rgba($white, .3);
 
   &__links-row:not(:last-child) {
     margin-bottom: 5px;
