--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -52,23 +52,18 @@
     }
   }
 
-  .search-form {
+  .search-form,
+  .login-form {
     position: absolute;
     top: calc(100% + 5px);
     right: 0;
-    width: 340px;
-    background-color: $white;
+    background-color: #F8F7F4;
     padding: 20px 15px;
     border-radius: 4px;
     z-index: 160;
     opacity: 0;
     visibility: hidden;
     transition: opacity .2s;
-
-    &.active {
-      opacity: 1;
-      visibility: visible;
-    }
 
     &__field {
       position: relative;
@@ -81,8 +76,57 @@
       font-size: 14px;
       border-radius: 4px;
 
+      &:not(:last-child) {
+        margin-bottom: 20px;
+      }
+
       &::placeholder {
         font-size: 14px;
+      }
+    }
+
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
+
+  }
+
+  .search-form {
+    width: 340px;
+  }
+
+  .login-form {
+    width: 280px;
+
+    &__button {
+      margin-right: 20px;
+      flex-grow: 1;
+    }
+
+    &__actions {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    &__action {
+      color: $light-black;
+      font-size: 13px;
+      position: relative;
+
+      &:not(:last-child) {
+        margin-bottom: 4px;
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        left: 0;
+        bottom: 0;
+        background-color: #ACABA9;
       }
     }
   }
