disabled button that open card if no products inside

--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -32,6 +32,10 @@
       border-radius: 50%;
     }
 
+    &.cart.disabled {
+      pointer-events: none;
+    }
+
     &-text {
       margin-left: 8px;
     }
