home page wrapper ignores global container

--- a/src/scss/components/home/_index.scss
+++ b/src/scss/components/home/_index.scss
@@ -1,6 +1,7 @@
 .home {
-  padding-top: 90px;
   background-image: url('~@/assets/img/slider-bg.png');
   background-repeat: no-repeat;
   background-position: center top;
+  margin: 0 -25px;
+  padding: 90px 25px 0;
 }
