started adaptivity for header

--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -256,3 +256,13 @@
   }
 
 }
+
+@media (max-width: 960px) {
+  .menu__list {
+    display: none;
+  }
+
+  .header__bottom {
+    display: none;
+  }
+}
