--- a/src/scss/components/home/_sales.scss
+++ b/src/scss/components/home/_sales.scss
@@ -39,3 +39,18 @@
     }
   }
 }
+
+@media (max-width: 820px) {
+  .sales {
+    flex-direction: column;
+    align-items: center;
+
+    &__item {
+      width: 100%;
+
+      &:not(:last-child) {
+        margin-bottom: 20px;
+      }
+    }
+  }
+}
