improve hits section for mobile

--- a/src/scss/components/home/_hits.scss
+++ b/src/scss/components/home/_hits.scss
@@ -16,5 +16,11 @@
 @media (max-width: 600px) {
   .hits__item {
     width: calc(100%);
+    max-width: 300px;
+  }
+
+  .hits {
+    flex-direction: column;
+    align-items: center;
   }
 }
