--- a/src/scss/components/home/_about.scss
+++ b/src/scss/components/home/_about.scss
@@ -31,3 +31,64 @@
   }
 
 }
+
+@media (max-width: 900px) {
+  .about {
+    padding: 20px 15px;
+  }
+
+  .about__item {
+    width: 100%;
+    padding-right: 0;
+
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+  }
+
+  .about__text {
+    padding-top: 0;
+  }
+
+  .about__item img {
+    margin-right: 20px;
+  }
+
+  .about__title {
+    font-size: 22px;
+    line-height: 26px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 500px) {
+  .about__title {
+    font-size: 18px;
+    line-height: 20px;
+  }
+
+  .about__text {
+    font-size: 13px;
+    line-height: 1.2;
+  }
+}
+
+@media (max-width: 450px) {
+  .about__title {
+    font-size: 18px;
+    line-height: 20px;
+    text-align: center;
+  }
+
+  .about__item {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .about__item img {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+}
