--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -79,6 +79,28 @@ button {
   min-height: 100vh;
 }
 
+.overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 120;
+  background-color: rgba($black, .5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .3s;
+
+  &.active {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.lock {
+  overflow: hidden;
+}
+
 .def-btn {
   background: linear-gradient(0deg, rgba(231,74,53,1) 0%, rgba(242,104,67,1) 100%);
   font-weight: 700;
