--- a/src/scss/components/catalog/_index.scss
+++ b/src/scss/components/catalog/_index.scss
@@ -6,12 +6,46 @@
     font-size: 35px;
     line-height: 41px;
     font-weight: 700;
-    margin-bottom: 25px;
+  }
+
+  &__head {
+    padding-bottom: 25px;
+  }
+
+  &__btn-filter {
+    margin-left: 50px;
+    width: 35px;
+    height: 35px;
+    outline: none;
+    display: none;
+
+    &:focus svg {
+      fill: #ccc;
+    }
+
+    svg {
+      width: 100%;
+      height: 100%;
+      fill: $white;
+    }
+  }
+}
+
+@media (max-width: 960px) {
+  .catalog__btn-filter {
+    display: block;
   }
 }
 
 @media (max-width: 500px) {
   .catalog__title {
     font-size: 30px;
+  }
+
+  .catalog__btn-filter {
+    margin-left: 50px;
+    width: 45px;
+    height: 45px;
+    outline: none;
   }
 }
