--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -299,6 +299,7 @@
 
 .mobile-menu {
   position: fixed;
+  z-index: 230;
   max-width: 400px;
   width: 100%;
   right: 0;
@@ -306,6 +307,12 @@
   top: 0;
   background-color: #849D8F;
   padding: 20px;
+  transform: translateX(100%);
+  transition: transform .3s;
+
+  &.active {
+    transform: translateX(0);
+  }
 
   &__head {
     display: flex;
