--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -57,84 +57,10 @@
     }
   }
 
-  .search-form,
-  .login-form,
-  .cart-popup {
-    position: absolute;
-    top: calc(100% + 5px);
-    right: 0;
-    background-color: #F8F7F4;
-    padding: 20px 15px;
-    border-radius: 4px;
-    z-index: 160;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity .2s;
 
-    &__field {
-      position: relative;
-      width: 100%;
-      border: 1px solid #D3D3D2;
-      height: 44px;
-      padding: 0 15px;
-      outline: none;
-      color: $light-black;
-      font-size: 14px;
-      border-radius: 4px;
-
-      &:not(:last-child) {
-        margin-bottom: 20px;
-      }
-
-      &::placeholder {
-        font-size: 14px;
-      }
-    }
-
-    &.active {
-      opacity: 1;
-      visibility: visible;
-    }
-
-  }
 
   .search-form {
     width: 340px;
-  }
-
-  .login-form {
-    width: 280px;
-
-    &__button {
-      margin-right: 20px;
-      flex-grow: 1;
-    }
-
-    &__actions {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-    &__action {
-      color: $light-black;
-      font-size: 13px;
-      position: relative;
-
-      &:not(:last-child) {
-        margin-bottom: 4px;
-      }
-
-      &:after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 1px;
-        left: 0;
-        bottom: 0;
-        background-color: #ACABA9;
-      }
-    }
   }
 
   .cart-popup {
@@ -268,6 +194,82 @@
 
 }
 
+.search-form,
+.login-form,
+.cart-popup {
+  position: absolute;
+  top: calc(100% + 5px);
+  right: 0;
+  background-color: #F8F7F4;
+  padding: 20px 15px;
+  border-radius: 4px;
+  z-index: 160;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .2s;
+
+  &__field {
+    position: relative;
+    width: 100%;
+    border: 1px solid #D3D3D2;
+    height: 44px;
+    padding: 0 15px;
+    outline: none;
+    color: $light-black;
+    font-size: 14px;
+    border-radius: 4px;
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+
+    &::placeholder {
+      font-size: 14px;
+    }
+  }
+
+  &.active {
+    opacity: 1;
+    visibility: visible;
+  }
+
+}
+
+.login-form {
+  width: 280px;
+
+  &__button {
+    margin-right: 20px;
+    flex-grow: 1;
+  }
+
+  &__actions {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  &__action {
+    color: $light-black;
+    font-size: 13px;
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: 4px;
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      left: 0;
+      bottom: 0;
+      background-color: #ACABA9;
+    }
+  }
+}
+
 .menu {
 
   &__item {
@@ -388,6 +390,16 @@
     align-items: center;
   }
 
+  &__login-form {
+    display: none;
+    background-color: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+  }
+
 }
 
 @media (max-width: 960px) {
@@ -417,6 +429,11 @@
   .mobile-menu__form {
     display: flex;
   }
+
+  .mobile-menu__login-form {
+    display: flex;
+  }
+
  }
 
 @media (max-width: 680px) {
