--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -88,6 +88,7 @@
         width: 33px;
         height: 33px;
         border-radius: 50%;
+        overflow: hidden;
         margin-right: 14px;
 
         img {
