--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -16,6 +16,10 @@
     margin-right: 10px;
   }
 
+  .header__button-wrapper.cart {
+    margin-right: 0;
+  }
+
   &__button {
     background-color: rgba($white, .3);
     padding: 8px 16px;
