--- a/src/scss/components/app/_header.scss
+++ b/src/scss/components/app/_header.scss
@@ -164,6 +164,7 @@
     background-color: $white;
     position: relative;
     border-radius: 4px;
+    margin-left: 10px;
 
     span {
       display: block;
