change styles dirname

--- a/src/styles/components/home/_index.scss
+++ b/src/styles/components/home/_index.scss
@@ -1,5 +1,5 @@
 .home {
-  background-image: url('~@/assets/img/slider-bg.png');
+  background-image: url('@/assets/img/slider-bg.png');
   background-repeat: no-repeat;
   background-position: center top;
   margin: 0 -25px;
